changing the background video

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="video-wrap">
             <div id="video">
                 <video id="bgvid" autoplay loop muted playsinline>
-                    <source src="media/weeding.mp4" type="video/mp4">
+                    <source src="media/undangan.mp4" type="video/mp4">
                 </video>
             </div>
         </div>
