--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div id="course" class="row justify-content-center">
         <div class="col-md-8 text-center">
-            <h1>Kondangin Yuks!</h1>
+            <h1>Kondangin Yuk!</h1>
             <p class="lead">Scan QR dibawah yaa!</p>
         </div>
     </div>
