--- a/index.html
+++ b/index.html
@@ -22,16 +22,18 @@
         </div>
     </div>
 
-    <audio autoplay loop>
-        <source src="media/music.mp3" type="audio/mpeg">
-    </audio>
+    <div class="caption text-center">
+        <img src="media/swipeup.gif" alt="swipeup">
+    </div>
 
     <div id="course" class="row justify-content-center">
         <div class="col-md-8 text-center">
-            <h1>Kondangin Yuks!</h1>
+            <h1>Kondangin Yuk!</h1>
             <p class="lead">Scan QR dibawah yaa!</p>
         </div>
     </div>
+
+    
 
     <script src="js/jquery-3.5.1.slim.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
