--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="video-background">
         <div class="video-wrap">
             <div id="video">
-                <video id="bgvid" autoplay loop muted playsinline>
+                <video id="bgvid" autoplay loop playsinline>
                     <source src="media/undangan.mp4" type="video/mp4">
                 </video>
             </div>
