Autoplay doest work without muted now lol

--- a/index.html
+++ b/index.html
@@ -15,12 +15,16 @@
     <div class="video-background">
         <div class="video-wrap">
             <div id="video">
-                <video id="bgvid" autoplay loop playsinline>
+                <video id="bgvid" autoplay loop muted playsinline>
                     <source src="media/undangan.mp4" type="video/mp4">
                 </video>
             </div>
         </div>
     </div>
+    
+    <audio autoplay>
+      <source src="media/music.mp3" type="audio/mpeg">
+    </audio>
 
     <div class="caption text-center">
         <img src="media/swipeup.gif" alt="swipeup">
