update lage wkwkkw

--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
         <div class="video-wrap">
             <div id="video">
                 <video id="bgvid" autoplay loop muted playsinline>
-                    <source src="media/undangan.mp4" type="video/mp4">
+                    <source src="media/undangan13.mp4" type="video/mp4">
                 </video>
             </div>
         </div>
     </div>
+
+    <audio autoplay loop>
+        <source src="media/music.mp3" type="audio/mpeg">
+    </audio>
 
     <div class="caption text-center">
         <img src="media/swipeup.gif" alt="swipeup">
@@ -30,6 +34,19 @@
         <div class="col-md-8 text-center">
             <h1>Kondangin Yuk!</h1>
             <p class="lead">Scan QR dibawah yaa!</p>
+            <div class="row">
+                <div class="col-md-6">
+                    <img class="img-fluid qr-image" src="media/dana.png" alt="Dana">
+                    <p class="lead donation">Dana</p>
+                </div>
+                <div class="col-md-6">
+                    <img class="img-fluid qr-image" src="media/ovo.png" alt="Dana">
+                    <p class="lead donation">Ovo</p>
+
+                </div>
+            </div>
+            <p class="lead mt-5">Terimakasih telah berpartisipasi!</p>
+
         </div>
     </div>
 
