--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </audio>
 
     <audio autoplay loop>
-        <source src="media/music.mp3" type="audio/mpeg">
+        <source src="media/music2.mp3" type="audio/mpeg">
     </audio>
 
     <div class="caption text-center">
