adding qr-code for location

--- a/index.html
+++ b/index.html
@@ -49,12 +49,26 @@
 
                 </div>
             </div>
-            <p class="lead mt-5">Terimakasih telah berpartisipasi!</p>
+            <p class="lead mt-3">Terimakasih telah berpartisipasi!</p>
 
         </div>
     </div>
 
-    
+    <div id="course2" class="row justify-content-center">
+        <div class="col-md-8 text-center">
+            <h1>Lokasi!</h1>
+            <p class="lead">Scan atau pencet untuk dapatkan lokasi!</p>
+            <a href="https://goo.gl/maps/jbm3o5EuiXmFGWCRA" target="_blank">
+                <img class="img-fluid qr-image" src="media/frame.png" alt="Location">
+            </a>
+        </div>
+    </div>
+
+    <footer>
+        <div class="container text-center">
+            <p class="lead footer">Sandi & Serly</p>
+        </div>
+    </footer>
 
     <script src="js/jquery-3.5.1.slim.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
