--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <footer>
         <div class="container text-center">
-            <p class="lead footer">Sandi & Serly</p>
+            <p class="lead footer">Sandi & Serli</p>
         </div>
     </footer>
 
